Fix some layout issues and implements g-table-scroll

--- a/src/main/wc/fieldset.less
+++ b/src/main/wc/fieldset.less
@@ -64,6 +64,16 @@ fieldset {
 			background-color: #f8f8f8;
 			border: 1px solid #DDDDDD;
 
+			&[style]
+			{
+				align-items: flex-start;
+
+				> label
+				{
+					align-items: flex-start;
+				}
+			}
+
 			* {
 				border: none;
 			}
