--- a/src/main/wc/table.less
+++ b/src/main/wc/table.less
@@ -90,9 +90,6 @@ table {
 	}
 
 	> thead > tr > * {
-		top: 0;
-		z-index: 10000;
-		position: sticky;
 		font-weight: bold;
 		border-color: #E4E4E4;
 		background-color: #E8E8E8;
@@ -126,9 +123,6 @@ table {
 
 	> tfoot > tr > *
 	{
-		bottom: 0;
-		z-index: 10000;
-		position: sticky;
 		font-weight: bold;
 		border-color: #E4E4E4;
 		background-color: #E8E8E8;
@@ -259,9 +253,7 @@ table.r20 > * > tr > *:nth-child(20)
 
 
 			> td{
-				&:not([title]) {
-					display: none
-				}
+				display: none;
 
 				&[title] {
 					margin: 4px;
@@ -476,7 +468,7 @@ th > label {
 	}
 }
 
-@media only screen and (max-width: 1600px)
+@media only screen and (max-width: 2000px)
 {
 	table[data-collapse="2000px"] {
 		.card()
